# Tabst.app

./: .gitignore  AGENTS.md  Agents.md  Agents.zh.md  README.md  README.zh.md  REFACTORING_PLAN.md  REFACTORING_REPORT_FINAL.md  ROADMAP.md  forge.config.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/: mcp.json
.github/: dependabot.yml  perf-thresholds.json
.github/workflows/: ci.yml  release-linux.yml  release-mac.yml  release-win.yml  release.yml  website-pages.yml
.sisyphus/: ralph-loop.local.md
docs/: PERFORMANCE_OPTIMIZATION_PLAN.md
docs/dev/: IA_ARCHIVE_BILINGUAL.md  OMR_LAB_RUNBOOK.md  OMR_LAB_SPEC.md  OMR_MODEL_DEBUG.md  README.md  REFACTORING_PLAN_RENDERER.md  REFACTOR_SPEED_PHASE_REPORT.md  SELECTION_SYNC_IMPLEMENTATION.md  TAURI_MIGRATION_STATUS.md  TRACKS_PANEL_Z_INDEX_FIX.md  workspace-persistence-unification-plan.md
public/: CNAME
public/docs/: README.md  ROADMAP.md
scripts/: README.md  assert-performance-thresholds.mjs  build-tauri-with-sidecar.mjs  build-tauri-with-sidecar.sh  collect-week1-baseline.mjs  dev-tauri-with-sidecar.mjs  dev-tauri-with-sidecar.sh  fetch-llama-server.sh  omr_onnx_provider.py  run-long-session-stress.mjs  run-multi-baseline.mjs  summarize-long-session.mjs  verify-tauri-config.mjs
skills/tauri-crabnebula-devtools/: SKILL.md
skills/tauri-hypothesi-mcp-bridge/: SKILL.md
skills/tauri-official-debug-baseline/: SKILL.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_job_manager.rs  ai_model_manager.rs  ai_ocr_commands.rs  ai_provider.rs  ai_sidecar.rs  dataset_commands.rs  fs_commands.rs  git_commands.rs  lib.rs  main.rs  models.rs  power_commands.rs  repo_commands.rs  support.rs
(+257 files in other folders)
