[package]
name = "tabst-tauri"
version = "0.6.8"
description = "Tabst Tauri runtime"
authors = ["Jay Bridge"]
license = "ISC"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
serde_json = "1.0"

[dependencies]
dirs = "5.0"
hex = "0.4"
notify = "8.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.30"
tauri = { version = "2.0", features = ["webview-data-url"] }
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2.9"
tokio = { version = "1", features = ["fs", "io-util", "process", "time", "sync"] }
trash = "5.2"
walkdir = "2.5"

[dev-dependencies]
tauri = { version = "2.0", features = ["test", "webview-data-url"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
